--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div class="row">
                     <div class="col-lg-6 col-md-12 site__title">
                         <h3 class="title__text">Привет!</h3>
-                        <h1 class="title__text-uppercase">Я Валерия,</h1>
+                        <h1 class="title__text-uppercase">Я Анастасия,</h1>
                         <h4 class="title__text-uppercase">Junior Web Developer</h4>
                         <div class="site__btns">
                             <div class="d-flex flex-row flex-wrap">
